fix: Make footer overlap other elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,7 @@ table, th, td {
     footer {
         width: 100%;
         font-size: 100%;
+        z-index: 2;
         
     }
    #heroimgbig {
@@ -419,10 +420,12 @@ table, th, td {
     }
    
     .imgindiv {
-        width: 99%;
+        width: 97%;
         height: auto;
         top: 0;
         margin: 0;
+        padding-left: 0;
+        padding-right: 0;
         scale: 0.9;
         
         
